# mydash

./: df_cat_despesa.csv  myindex.py  pyproject.toml
componentes/: dashboards.py  demo.kdenlive  df_receitas.csv  extratos.py  globals.py  sidebar.py
