[tool.poetry]
name = "mybudget"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
dash = "^2.6.0"
pandas = "^1.4.3"
dash-bootstrap-components = "^1.2.0"
bs4 = "^0.0.1"
sympy = "^1.10.1"
mypy = "^0.971"
dash-bootstrap-templates = "1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
